# list2gis

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
config/: Example-Adressen-Kategorien.json
src/: app.py  basemaps.py  config_io.py  data.py  export_kml.py  geocode.py  mapview.py  shapes.py
