[project]
name = "list2gis"
version = "0.1.0"
description = "Streamlit app to visualize CSV address lists on a map and export to KML/PDF."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "simplekml>=1.3.6",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
]

[tool.uv]
# OneDrive blocks hardlinks on synced folders; use copy mode instead.
link-mode = "copy"
